[gd_scene load_steps=6 format=3 uid="uid://cbafi1t0g56b6"]

[ext_resource type="Script" uid="uid://6n15hklxcwc7" path="res://scripts/globals/audio.gd" id="1_6n3bj"]
[ext_resource type="AudioStream" uid="uid://dj66fl3sy7enb" path="res://sound/elevator_music.mp3" id="2_hlm5c"]
[ext_resource type="AudioStream" uid="uid://bofcx4252i3rv" path="res://sound/button_hover.mp3" id="3_wdljl"]
[ext_resource type="AudioStream" uid="uid://duij71qm5lfvo" path="res://sound/button_click.mp3" id="4_dl6it"]

[sub_resource type="AudioStream" id="AudioStream_bwtr5"]

[node name="Audio" type="Node" node_paths=PackedStringArray("menu_principal", "boton_select", "boton_down", "boton_pressed", "ascensor")]
process_mode = 3
script = ExtResource("1_6n3bj")
menu_principal = NodePath("Musica/MenuPrincipal")
boton_select = NodePath("SFX/Menus/BotonSelect")
boton_down = NodePath("SFX/Menus/BotonDown")
boton_pressed = NodePath("SFX/Menus/BotonPressed")
ascensor = NodePath("Musica/MenuPrincipal")

[node name="Musica" type="Node" parent="."]

[node name="MenuPrincipal" type="AudioStreamPlayer" parent="Musica"]
stream = ExtResource("2_hlm5c")

[node name="SFX" type="Node" parent="."]

[node name="InGame" type="Node" parent="SFX"]

[node name="Menus" type="Node" parent="SFX"]

[node name="BotonSelect" type="AudioStreamPlayer" parent="SFX/Menus"]
stream = ExtResource("3_wdljl")
max_polyphony = 3

[node name="BotonDown" type="AudioStreamPlayer" parent="SFX/Menus"]
stream = SubResource("AudioStream_bwtr5")

[node name="BotonPressed" type="AudioStreamPlayer" parent="SFX/Menus"]
stream = ExtResource("4_dl6it")
